--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/prioritizeitlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./prioritizeitlogo.png" type="image/x-icon">
     <title>Prioritize It!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="./images/prioritizeitlogo.png" alt="logo" width="100%" height="150px"></h1>
+        <h1><img src="./prioritizeitlogo.png" alt="logo" width="100%" height="150px"></h1>
         <h2>Add your tasks below 👇</h2>
         <input type="text" id="taskInput" placeholder="Add a new task..." />
         <button id="addTaskBtn">Add Task</button>
